--- a/src/app/fcpc/cliente/cliente.component.html
+++ b/src/app/fcpc/cliente/cliente.component.html
@@ -1,11 +1,11 @@
 <app-nav></app-nav>
 <!-- {{userLoginOn |json}} -->
 
-<p *ngIf="!userLoginOn">Usuario No autenticado</p>
+<!-- <p *ngIf="!userLoginOn">Usuario No autenticado</p>
 <p *ngIf="userLoginOn"> Usuario Atenticado</p>
 <div *ngIf="userLoginOn">
     <p>Clientes</p>
-</div>
+</div> -->
 
 <div class="container py-15">
     <div class="row">
