--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -7,16 +7,20 @@
                 <li class="nav-item">
                     <a class="nav-link active" routerLink="/inicio">Portafolio</a>
                 </li>
-                <li *ngIf="!userLoginOn" class="nav-item">
+                <!-- <li *ngIf="!userLoginOn" class="nav-item"> -->
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/iniciar-sesion">Iniciar Sesion</a>
                 </li>
-                <li *ngIf="userLoginOn" class="nav-item">
+                <!-- <li *ngIf="userLoginOn" class="nav-item"> -->
+                <li  class="nav-item">
                     <a class="nav-link" routerLink="/clientes">Clientes</a>
                 </li>
-                <li *ngIf="userLoginOn" class="nav-item">
+                <!-- <li *ngIf="userLoginOn" class="nav-item"> -->
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/productos">Productos</a>
                 </li>
-                <li *ngIf="userLoginOn" class="nav-item">
+                <!-- <li *ngIf="userLoginOn" class="nav-item"> -->
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/orden-compra">Orden De Compra</a>
                 </li>
                 <!-- <li *ngIf="userLoginOn" class="nav-item">
