--- a/src/app/pages/dasgboard/dasgboard.component.html
+++ b/src/app/pages/dasgboard/dasgboard.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <p *ngIf="!userLoginOn">Usuario No autenticado</p>
-<p *ngIf="userLoginOn"> Usuario Atenticado</p>
-<div *ngIf="userLoginOn">
+<!-- <p *ngIf="userLoginOn"> Usuario Atenticado</p> -->
+<!-- <div *ngIf="userLoginOn">
     <p>Bienvenido: {{ userData?.name }}</p>
-</div>
+</div> -->
